--- a/index.html
+++ b/index.html
@@ -1,68 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <link rel="stylesheet" href="/style/mobile.css">
+    <link rel="stylesheet" href="./style/normalize.css" />
+    <!-- <link
+      rel="stylesheet"
+      media="screen and (max-width: 600px)"
+      href="./style/mobile.css"
+    /> -->
+    <link
+      rel="stylesheet"
+      media="screen and (min-width: 650px)"
+      href="./style/desktop.css"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <!-- <link rel="stylesheet" href=""> -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Sunnyside agency landing page</title>
+    <title>Frontend Mentor | Sunnyside agency landing page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  About
-  Services
-  Projects
-  Contact
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style></style>
+  </head>
+  <body>
+    <header>
+      <div id="nav--top">
+        <h1>
+          <span class="hide">sunnyside</span
+          ><img src="./images/logo.svg" alt="Sunnyside Logo" />
+        </h1>
+        <img src="./images/icon-hamburger.svg" alt="" class="hide--desktop hamburger"/>
+        <nav class="nav--mobile nav--desktop hide">
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <h1>
+        WE ARE <br />
+        CREATIVES
+      </h1>
+      <img
+        src="./images/icon-arrow-down.svg"
+        alt="arrow down"
+        class="arrow-down"
+      />
+    </header>
+    <main>
+      <section class="services">
+        <img src="./images/mobile/image-transform.jpg" alt="" />
+        <article class="white-box">
+          <h2>Transform your brand</h2>
+          <p>
+            We are a full-service creative agency specializing in helping brands
+            grow fast. Engage your clients through compelling visuals that do
+            most of the marketing for you.
+          </p>
+          <a href="#" class="learn-more yellow-underline">Learn more</a>
+        </article>
+      </section>
+      <section class="services">
+        <img src="./images/mobile/image-stand-out.jpg" alt="" />
+        <article class="white-box">
+          <h2>Stand out to the right audience</h2>
+          <p>
+            Using a collaborative formula of designers, researchers,
+            photographers, videographers, and copywriters, we’ll build and
+            extend your brand in digital places.
+          </p>
+          <a href="#" class="learn-more pink-underline">Learn more</a>
+        </article>
+      </section>
+      <section class="services overlay-text cherry">
+        <!-- <img src="./images/mobile/image-graphic-design.jpg" alt="" /> -->
+        <article class="text-on-img">
+          <h2>Graphic design</h2>
+          <p>
+            Great design makes you memorable. We deliver artwork that
+            underscores your brand message and captures potential clients’
+            attention.
+          </p>
+        </article>
+      </section>
+      <section class="services overlay-text orange">
+        <!-- <img src="./images/mobile/image-photography.jpg" alt="" /> -->
+        <article class="text-on-img">
+          <h2>Photography</h2>
+          <p>
+            Increase your credibility by getting the most stunning, high-quality
+            photos that improve your business image.
+          </p>
+        </article>
+      </section>
+      <section id="testimonials" class="cf">
+        <h2>Client testimonials</h2>
+        <div class="testemionals">
+          <article class="testimonial">
+            <img src="./images/image-emily.jpg" alt="" />
+            <p>
+              We put our trust in Sunnyside and they delivered, making sure our
+              needs were met and deadlines were always hit.
+            </p>
+            <h3>Emily R.</h3>
+            <h4>Marketing Director</h4>
+          </article>
+          <article class="testimonial">
+            <img src="./images/image-thomas.jpg" alt="" />
+            <p>
+              Sunnyside’s enthusiasm coupled with their keen interest in our
+              brand’s success made it a satisfying and enjoyable experience.
+            </p>
+            <h3>Thomas S.</h3>
+            <h4>Chief Operating Officer</h4>
+          </article>
+          <article class="testimonial">
+            <img src="./images/image-jennie.jpg" alt="" />
+            <p>
+              Incredible end result! Our sales increased over 400% when we worked
+              with Sunnyside. Highly recommended!
+            </p>
+            <h3>Jennie F.</h3>
+            <h4>Business Owner</h4>
+          </article>
+        </div>
+      </section>
+      <div id="gallery">
+        <img
+          src="./images/mobile/image-gallery-milkbottles.jpg"
+          alt=""
+          class="gallery--img gallery--img__1"
+        />
+        <img
+          src="./images/mobile/image-gallery-orange.jpg"
+          alt=""
+          class="gallery--img gallery--img__2"
+        />
+        <img
+          src="./images/mobile/image-gallery-cone.jpg"
+          alt=""
+          class="gallery--img gallery--img__3"
+        />
+        <img
+          src="images/mobile/image-gallery-sugar-cubes.jpg"
+          alt=""
+          class="gallery--img gallery--img__4"
+        />
+      </div>
+    </main>
+    <footer>
+      <h2><img src="./images/logo-green.svg" alt="" class="green-overlay" /></h2>
+      <nav class="nav__footer">
+        <ul>
+          <li>About</li>
+          <li>Services</li>
+          <li>Projects</li>
+        </ul>
+      </nav>
+      <div id="socials">
+        <a href="#"><img src="./images/icon-facebook.svg" alt="" /></a>
+        <a href="#"><img src="./images/icon-instagram.svg" alt="" /></a>
+        <a href="#"><img src="./images/icon-twitter.svg" alt="" /></a>
+        <a href="#"><img src="./images/icon-pinterest.svg" alt="" /></a>
+      </div>
+      <aside class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </aside>
+    </footer>
 
-  We are creatives
-
-  Transform your brand
-
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
-
-  Learn more
-
-  Stand out to the right audience
-
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
-
-  Learn more
-
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-
-  Client testimonials
-
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
-
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
-
-  About
-  Services
-  Projects
-  Contact
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <script src="./script.js">
+    </script>
+  </body>
 </html>
